--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,23 +35,25 @@ jobs:
       - name: Install ${{ runner.os }} dependencies.
         shell: bash
         run: |
+          julia -e 'using Pkg; Pkg.add("JuliaFormatter")'
           if [ "$RUNNER_OS" == "Linux" ]; then
               curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.41.0/ktlint
               chmod a+x ktlint
               sudo mv ktlint /usr/local/bin/
+              (cd /usr/local/bin && sudo ln -s $(find ~/.julia -name format.jl))
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew tap holgerbrandl/tap https://github.com/holgerbrandl/homebrew-tap
               brew install clang-format kscript ktlint
+              (cd /usr/local/bin && ln -s $(find ~/.julia -name format.jl))
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install zip curl
+              (cd /usr/bin && ln -s $(find ~/.julia -name format.jl))
           fi
           dart pub global activate stagehand
           curl -s "https://get.sdkman.io" | bash
           source "$HOME/.sdkman/bin/sdkman-init.sh"
           sdk install kscript
-          julia -e 'using Pkg; Pkg.add("JuliaFormatter")'
-          find ~/.julia -name format.jl
-          exit 1
+          which format.jl
 
       - name: Install dart sprintf
         shell: bash
