Test sbp generator

--- a/tox.ini
+++ b/tox.ini
@@ -14,5 +14,6 @@ passenv =
 deps =
     unittest-expander
     pytest-cov
+    sbp
 commands =
     pytest --cov --cov-config=setup.cfg -rs -v {posargs}
