--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skip_missing_interpreters = true
 passenv =
     HOME
     LocalAppData
+    CXX
     UPDATE_EXPECTED
     KEEP_GENERATED
     SHOW_ERRORS
