--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-10.15
-          - windows-2019
+          - ubuntu-20.04
     runs-on: ${{ matrix.os }}
 
     steps:
