--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Install clang-format
         shell: bash
         run: |
-          choco install curl llvm
+          choco install llvm
+          export PATH="$PATH:/C/Program Files/LLVM/bin"
           which clang-format
           curl -s "https://get.sdkman.io" | bash
           source "$HOME/.sdkman/bin/sdkman-init.sh"
