--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches:
   pull_request:
     branches: [ main ]
 
@@ -33,6 +33,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - name: Set up Visual Studio shell
+        uses: egor-tensin/vs-shell@v2
 
       - name: Install go packages
         shell: bash
@@ -67,6 +69,8 @@ jobs:
               (cd /usr/local/bin && ln -s $HOME/go/bin/golint)
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install zip curl astyle llvm
+              curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.41.0/ktlint
+              mv ktlint tests/
           fi
           dart pub global activate stagehand
           curl -s "https://get.sdkman.io" | bash
