--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,26 +22,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.0.5'
-      - uses: julia-actions/setup-julia@v1
-      - uses: fwilhe2/setup-kotlin@main
-      - uses: jiro4989/setup-nim-action@v1
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
       - name: Set up Visual Studio shell
         uses: egor-tensin/vs-shell@v2
-
-      - name: Install go packages
-        shell: bash
-        run: |
-          (go get github.com/hgfischer/go-iter \
-           && go get github.com/google/go-cmp/cmp \
-           && go get golang.org/x/lint/golint \
-           && go get github.com/adsharma/py2many/pygo/runtime \
-          )
 
       - name: Install tox
         run: |
@@ -66,6 +48,9 @@ jobs:
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install zip curl astyle llvm
           fi
+          export PATH="$PATH:/C/Program Files/LLVM/bin"
+          clang-format tests/expected/*.cpp
+          clang++ -std=c++14 -I . -stdlib=libc++ tests/expected/binit.cpp
           dart pub global activate stagehand
           curl -s "https://get.sdkman.io" | bash
           source "$HOME/.sdkman/bin/sdkman-init.sh"
