--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
         run: rm tests/cases/*.py
 
       - name: Run black
-        run: black */ *.py
+        run: black --check */ *.py
 
       - name: Run pyflakes
         run: pyflakes */ *.py
