--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
            && go get golang.org/x/lint/golint \
            && go get github.com/adsharma/py2many/pygo/runtime \
           )
+          which golint
 
       - name: Install tox
         run: |
