--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,6 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
-          - macos-10.15
           - windows-2019
     runs-on: ${{ matrix.os }}
 
@@ -39,6 +37,8 @@ jobs:
       - name: Install go packages
         shell: bash
         run: |
+          find /C/hostedtoolcache/windows/kotlin/
+          which kotlinc
           (go get github.com/hgfischer/go-iter \
            && go get github.com/google/go-cmp/cmp \
            && go get golang.org/x/lint/golint \
