--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           find /C/hostedtoolcache/windows/kotlin/
           which kotlinc
+          file $(which kotlinc)
           (go get github.com/hgfischer/go-iter \
            && go get github.com/google/go-cmp/cmp \
            && go get golang.org/x/lint/golint \
