--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,7 +101,7 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             export PATH="$PATH:/C/Program Files/LLVM/bin"
           fi
-          tox
+          tox -e py38 -- -k kotlin
 
   lint:
     runs-on: ubuntu-latest
