--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,11 @@ jobs:
               (cd /usr/local/bin && ln -s $(find ~/.julia -name format.jl))
               (cd /usr/local/bin && ln -s $HOME/go/bin/golint)
           elif [ "$RUNNER_OS" == "Windows" ]; then
+              pwd
               unzip kscript-3.1.0.zip
               ls .
-              exit 1
+              export PATH="$PATH:kscript-3.1.0/bin/"
+              which kscript
           fi
 
       - name: Run tox
