--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             export PATH="$PATH:/C/Program Files/LLVM/bin"
             export PATH="$PATH:kscript-3.1.0/bin/"
+            export PATHEXT="$PATHEXT;.JAR"
           fi
           tox -e py38 -- -k 'kotlin and print'
 
