--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,7 @@ jobs:
               unzip kscript-3.1.0.zip
               ls .
               export PATH="$PATH:$GITHUB_WORKSPACE/kscript-3.1.0/bin/"
-              echo $PATHEXT
-              export PATHEXT=".JAR;$PATHEXT"
-              curl -o jarfix.exe http://johann.loefflmann.net/downloads/jarfix.exe
-              ./jarfix.exe /s
+              echo 'kotlin -cp %GITHUB_WORKSPACE%/kscript-3.1.0/bin/kscript.jar kscript.app.KscriptKt %*' > kscript-3.1.0/bin/kscript.bat
               which kscript
               echo $PATHEXT
           fi
@@ -74,7 +71,6 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             export PATH="$PATH:/C/Program Files/LLVM/bin"
             export PATH="$PATH:$GITHUB_WORKSPACE/kscript-3.1.0/bin/"
-            export PATHEXT=".JAR;$PATHEXT"
             set
           fi
           tox -e py38 -- -k 'kotlin and print'
