--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,7 @@ jobs:
               unzip kscript-3.1.0.zip
               ls .
               export PATH="$PATH:$GITHUB_WORKSPACE/kscript-3.1.0/bin/"
-              kotlin -version
-              echo 'kotlin -version' > kscript-3.1.0/bin/kscript.bat
+              echo 'kotlin -cp %GITHUB_WORKSPACE%/kscript-3.1.0/bin/kscript.jar kscript.app.KscriptKt --version' > kscript-3.1.0/bin/kscript.bat
               which kscript
               echo $PATHEXT
           fi
