--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     unittest-expander
     pytest-cov
     astpretty
+    /Users/john.vandenberg/transpilers/pscript
     git+https://github.com/mivade/argparse_dataclass/
 commands =
     pytest --cov --cov-config=setup.cfg -rs -v {posargs}
