--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,7 @@ deps =
     astpretty
     git+https://github.com/mivade/argparse_dataclass/
     git+https://github.com/adsharma/adt/
+    monkeytype
+    python-box
 commands =
     pytest --cov --cov-config=setup.cfg -rs -v {posargs}
