Initial ruby support

--- a/tox.ini
+++ b/tox.ini
@@ -23,5 +23,6 @@ deps =
     toposort
     git+https://github.com/mivade/argparse_dataclass/
     git+https://github.com/adsharma/adt/
+    git+https://github.com/jayvdb/py2rb@new_versions
 commands =
     pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
