Add Java using VOC - tests fail

--- a/tox.ini
+++ b/tox.ini
@@ -24,5 +24,6 @@ deps =
     git+https://github.com/mivade/argparse_dataclass/
     git+https://github.com/adsharma/adt/
     git+https://github.com/jayvdb/py2rb@new_versions
+    git+https://github.com/beeware/voc
 commands =
     pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
