--- a/tox.ini
+++ b/tox.ini
@@ -25,5 +25,7 @@ deps =
     git+https://github.com/adsharma/adt/
     git+https://github.com/jayvdb/py2rb@new_versions
     git+https://github.com/beeware/voc
+    transpyle[fortran,c]
+    #/Users/john.vandenberg/transpilers/transpyle
 commands =
     pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
