Add Shell using sherlock

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,8 @@ deps =
     git+https://github.com/adsharma/adt/
     git+https://github.com/jayvdb/py2rb@new_versions
     git+https://github.com/beeware/voc
-    transpyle[fortran,c]
+    transpyle #[fortran,c]
     #/Users/john.vandenberg/transpilers/transpyle
+    /Users/john.vandenberg/transpilers/sherlock.py
 commands =
     pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
