--- a/tox.ini
+++ b/tox.ini
@@ -28,5 +28,6 @@ deps =
     transpyle #[fortran,c]
     #/Users/john.vandenberg/transpilers/transpyle
     /Users/john.vandenberg/transpilers/sherlock.py
+    git+https://github.com/Coronon/PySchemeTranspiler
 commands =
     pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
