--- a/tox.ini
+++ b/tox.ini
@@ -24,4 +24,4 @@ deps =
     git+https://github.com/mivade/argparse_dataclass/
     git+https://github.com/adsharma/adt/
 commands =
-    pytest --ignore=tests/expected --ignore=tests/ext_expected --cov --cov-config=setup.cfg -rs -v {posargs}
+    pytest --ignore=tests/expected --ignore=tests/ext_expected --ignore=tests/output/ --cov --cov-config=setup.cfg -rs -v {posargs}
