--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ passenv =
     GOPATH
     GOCACHE
 deps =
-    unittest-expander
+    git+https://github.com/zuo/unittest_expander
     pytest-cov
     black
     astpretty
