Fix py2rb directory

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
     toposort
     git+https://github.com/mivade/argparse_dataclass/
     git+https://github.com/adsharma/adt/
-    git+https://github.com/jayvdb/py2rb@new_versions
+    git+https://github.com/nanobowers/py2rb
     git+https://github.com/beeware/voc
     transpyle #[fortran,c]
     #/Users/john.vandenberg/transpilers/transpyle
