tox.ini: Add pytest-reverse

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ passenv =
 deps =
     git+https://github.com/zuo/unittest_expander
     pytest-cov
+    pytest-reverse
     black
     astpretty
     toposort
