--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,8 @@ deps =
     black
     astpretty
     toposort
-    git+https://github.com/mivade/argparse_dataclass/
-    git+https://github.com/adsharma/adt/
+    #git+https://github.com/mivade/argparse_dataclass/
+    #git+https://github.com/adsharma/adt/
     git+https://github.com/nanobowers/py2rb
     git+https://github.com/beeware/voc
     transpyle #[fortran,c]
