--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ passenv =
     GOPATH
     GOCACHE
 deps =
+    environs
     git+https://github.com/zuo/unittest_expander
     pytest-cov
     black
