--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           set -ex
           apt-get update
-          apt-get install --no-install-recommends -y ca-certificates curl git wget
+          apt-get install --no-install-recommends -y ca-certificates curl git wget build-essential
           adduser --disabled-password --gecos "" linuxbrew
           wget -c https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh
           # c.f. https://stackoverflow.com/questions/72435188/how-to-install-brew-using-a-shallow-clone
@@ -48,7 +48,7 @@ jobs:
           chmod a+x /home/linuxbrew/.linuxbrew/Homebrew/bin/brew
           su -l linuxbrew -c "CI=1 USER=linuxbrew brew tap holgerbrandl/tap"
           su -l linuxbrew -c "CI=1 USER=linuxbrew brew tap athrunsun/linuxbinary"
-          su -l linuxbrew -c "CI=1 USER=linuxbrew brew install gcc@10"
+          su -l linuxbrew -c "CI=1 USER=linuxbrew brew install gcc"
           su -l linuxbrew -c "CI=1 USER=linuxbrew brew install cljstyle"
           su -l linuxbrew -c "CI=1 USER=linuxbrew brew install ktlint kscript"
 
